--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "project to showcase workflows",
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/ericnation/workflows.git"
   },
-  "author": "Eric Nation"
+  "author": "Eric Nation",
+  "devDependencies": {
+    "gulp": "^3.8.7",
+    "gulp-coffee": "^2.1.1",
+    "gulp-util": "^3.0.0"
+  }
 }
