--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "gulp-compass": "^1.3.0",
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.0.6",
+    "gulp-if": "^1.2.4",
+    "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
     "jquery": "^2.1.1",
     "mustache": "^0.8.2"
