--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.0.6",
     "gulp-if": "^1.2.4",
+    "gulp-minify-html": "^0.1.4",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
     "jquery": "^2.1.1",
