--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "gulp-concat": "^2.3.4",
     "gulp-connect": "^2.0.6",
     "gulp-if": "^1.2.4",
+    "gulp-imagemin": "^1.0.0",
+    "gulp-jsonminify": "0.0.1",
     "gulp-minify-html": "^0.1.4",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
+    "imagemin-pngcrush": "^0.1.0",
     "jquery": "^2.1.1",
     "mustache": "^0.8.2"
   }
